--- a/inst/rmd/quality_control.Rmd
+++ b/inst/rmd/quality_control.Rmd
@@ -242,19 +242,27 @@ rRMSAnalyzer::plot_heatmap_corr(ribo_to_check,"Count")
 To identify distinct coverage profile, we compare the coverage profiles of all samples in the series. The Correspondence Analysis (COA) plot shows the distance between each sample based on its coverage profile. Samples that are far appart are considered putative outliers. At this stage, it is possible to visualise the bias linked to the sequencing batch or to evaluate the performance of the ComBat-seq correction algorithm if it has been applied (Zhang et al, 2020; Paraqindes et al, in revision).
 
 ```{r}
+#incrementing qcdata
+#calculate the number of fold the sample is an outlier
+qcdata$total_outliers <- rowSums(qcdata[, c("coverage_quality", "rle_median_quality")] == "warning")
+
+#add the column in ribo_to_check
+ribo_to_check$metadata$outlier_level <- qcdata$total_outliers
+
+#Plot_coa for outliers
+plot_coa_binaire <- rRMSAnalyzer::plot_coa(ribo_to_check, color_col = "outlier_level")
+plot_coa_binaire <- plot_coa_binaire + 
+   ggplot2::scale_color_manual(values = c("0" = "darkgrey", "1" = "#F8A31B", "2" = "#F27314", "3" = "#E25033", "4" = "#AA3929"))
+print(plot_coa_binaire)
+
+
+
+
+
+#Plot_coa for batch effect
 # Plot_coa by color_col specified in param
 plot_coa <- rRMSAnalyzer::plot_coa(ribo_to_check,color_col = params$library_col)
 print(plot_coa)
-# assign a name in ribo_to_check (=ribo object) if sample is an outlier
-ribo_to_check$metadata$color <- ifelse(
-  ribo_to_check$metadata$samplename %in% outlier$key,
-  "outlier",  # les échantillons dans outlier
-  "normal"  # les autres échantillons
-)
-# Plot_coa by outliers 
-plot_coa_binaire <- rRMSAnalyzer::plot_coa(ribo_to_check, color_col = "color")
-
-print(plot_coa_binaire)
 ```
 
 # C-scores analysis
@@ -272,7 +280,9 @@ Thus, it uses **`r as.character(valid_sites)`** genomic positions instead of all
 
 ```{r not corrected cscore PCA,echo=FALSE}
 rRMSAnalyzer::plot_pca(ribo_to_check,params$library_col)
+```
 
+```{r write table}
 output_dir <- "/home/bioinfo/Bureau/RMS/RMS_Git_change_plot_with_Emilie/rRMSAnalyzer"
 write.table(qcdata,file.path(output_dir,"quality_control.csv"),sep="\t",row.names=FALSE,quote = FALSE)
 ```
