--- a/inst/rmd/quality_control.Rmd
+++ b/inst/rmd/quality_control.Rmd
@@ -253,7 +253,7 @@ ribo_to_check$metadata$outlier_level <- qcdata$total_outliers
 plot_coa_binaire <- rRMSAnalyzer::plot_coa(ribo_to_check, color_col = "outlier_level")
 plot_coa_binaire <- plot_coa_binaire + 
    ggplot2::scale_color_manual(values = c("0" = "darkgrey", "1" = "#F8A31B", "2" = "#F27314", "3" = "#E25033", "4" = "#AA3929"))
-print(plot_coa_binaire)
+#print(plot_coa_binaire)
 
 
 
@@ -262,7 +262,9 @@ print(plot_coa_binaire)
 #Plot_coa for batch effect
 # Plot_coa by color_col specified in param
 plot_coa <- rRMSAnalyzer::plot_coa(ribo_to_check,color_col = params$library_col)
-print(plot_coa)
+#print(plot_coa)
+
+grid.arrange(plot_coa, plot_coa_binaire, ncol = 2)
 ```
 
 # C-scores analysis
