--- a/inst/rmd/diff_sites.Rmd
+++ b/inst/rmd/diff_sites.Rmd
@@ -16,8 +16,9 @@ params:
     project_name: "Unnamed project"
 ---
 ```{r include = FALSE}
-all_sites <- length(ribo_to_check[[1]][[1]][[1]])
-ribom <- extract_data(ribo_to_check)
+#s'assurer de faire un load des données avant de lancer ce chunk
+all_sites <- length(ribo[[1]][[1]][[1]])
+ribom <- extract_data(ribo)
 valid_sites <- sum(complete.cases(ribom))
 knitr::opts_chunk$set(echo=FALSE)
 ```
@@ -75,21 +76,23 @@ library(patchwork)
 library(rRMSAnalyzer)
 library(writexl)
 data("human_methylated")
-
-
+# prend en entrée une riboclass annotée
+ribo_df <- extract_data(ribo_adj_annot,
+                        col = "cscore",
+                        only_annotated = TRUE)
 # 7.1. Transformation du dataframe "ribo_df"
 
-new_metadata_sites <- ribo_to_check%>%
-  pivot_longer(cols = c("L1-CTA", "L1-SNORD104", "L2-CTA", "L2-SNORD104"), names_to = "sample_name", values_to = "cscore") %>% #remplacer les noms des échantillons, ici "L1-CTA/SNORD104" 
+new_metadata_sites <- ribo_df%>%
+  pivot_longer(cols = c("N3-GT2-JFH", "N3-MOCK",), names_to = "sample_name", values_to = "cscore") %>% #remplacer les noms des échantillons, ici "L1-CTA/SNORD104" 
   select(site, cscore, sample_name)
 
 #7.2. Calcul de la différence des médianes et des seuils
 
 metadata_data_total <- new_metadata_sites%>%
   group_by(site) %>%
-  summarize(median_Cscore_metadata_ech_ctrl = median(cscore[sample_name == c("L1-CTA", "L2-CTA")]), # indiquer le nom de l'échantillon 
+  summarize(median_Cscore_metadata_ech_ctrl = median(cscore[sample_name == c("N3-GT2-JFH", "N3-GT2-JFH")]), # indiquer le nom de l'échantillon 
             #si 1 seul échantillon == "samplename" / si >1 échantillon == c("samplename1", "samplename2")
-            median_Cscore_metadata_ech = median(cscore[sample_name == c("L1-SNORD104", "L2-SNORD104")]), # indiquer le nom de l'échantillon
+            median_Cscore_metadata_ech = median(cscore[sample_name == c("N1-MOCK-P", "N3-MOCK")]), # indiquer le nom de l'échantillon
             #si 1 seul échantillon == "samplename" / si >1 échantillon == c("samplename1", "samplename2")
             difference = median_Cscore_metadata_ech - median_Cscore_metadata_ech_ctrl)
 
@@ -100,13 +103,12 @@ metadata_data_total$difference_cat <- ifelse(abs(metadata_data_total$difference)
 metadata_data_total$site <- factor(metadata_data_total$site, levels = human_methylated$Nomenclature)
 
 #7.3. Graphique n°1: visualisation de la valeur absolue des Cscores
-
 part1 <- ggplot(metadata_data_total, aes(x=site, y=difference, label=site)) +
   geom_bar(stat='identity', aes(fill=difference_cat), width=.9) +
   scale_fill_manual(name="Difference of median C-score",
                     labels = c("High", "Low", "No difference"),
                     values = c("high"="red", "low"="blue", "no" = "darkgrey")) +
-  labs(subtitle="Difference of median C-score (LNA-SNORD - LNA-CTL)", #à changer
+  labs(subtitle="Difference of median C-score (Gt1 - Gt2/Gt3)", #à changer
        title= "Figure") +
   geom_hline(yintercept = 0.05, linetype = "11") +
   geom_hline(yintercept = -0.05, linetype = "11") +
@@ -128,10 +130,10 @@ part1 <- ggplot(metadata_data_total, aes(x=site, y=difference, label=site)) +
 part2 <- ggplot(metadata_data_total) +
   labs(subtitle = "C-score") +
   geom_point(data = metadata_data_total[,c(1,3)],
-             aes(x = site, y = median_Cscore_metadata_ech, color = "LNA-SNORD"), 
+             aes(x = site, y = median_Cscore_metadata_ech, color = "Gt2/Gt3"), 
              size = 2) +
   geom_point(data = metadata_data_total[,c(1,2)],
-             aes(x = site, y = median_Cscore_metadata_ech_ctrl, color = "LNA-CTA"),
+             aes(x = site, y = median_Cscore_metadata_ech_ctrl, color = "Gt1"),
              size = 2) +
   theme_bw() +
   theme(axis.title.y = element_blank(),
@@ -139,9 +141,9 @@ part2 <- ggplot(metadata_data_total) +
         axis.ticks.y = element_blank(),
         plot.subtitle = element_text(hjust = 0.5),
         panel.grid.minor = element_blank()) +
-  geom_segment(data = metadata_data_total[which(metadata_data_total$site == "28S_Cm1327"), ], 
+  geom_segment(data = metadata_data_total[which(metadata_data_total$site %in% c("28S_Am1310", "18S_Gm1447", "18S_Cm1272")), ], 
                #changer les noms des sites d'intérêt
-               #si 1 site: [which(metada_data_total$site == "28S_Cm1327"), ]
+               #si 1 site: [which(metada_data_total$site %in% "28S_Cm1327"), ]
                #si >1 site: [which(metada_data_total$site %in% c("28S_Cm1327", "18S_Gm1447")),]
                aes(x = site, y = median_Cscore_metadata_ech, xend = site, yend =
                      median_Cscore_metadata_ech_ctrl),
@@ -150,7 +152,7 @@ part2 <- ggplot(metadata_data_total) +
                linewidth = 1) +
   coord_flip() +
   scale_y_continuous(sec.axis = sec_axis(trans = ~ ., name = NULL)) +
-  scale_color_manual(values = c("ech" = "cyan", "ech_ctrl" = "gray"),
+  scale_color_manual(values = c("Gt2/Gt3" = "cyan", "Gt1" = "gray"),
                      name = "Légende")
 
 #7.5. Combiner les graphiques 1 et 2 en une seule image 
@@ -158,8 +160,6 @@ part2 <- ggplot(metadata_data_total) +
 part1 + part2 + plot_layout(widths = c(2,1))
 
 # Pour un bon rendu, enregistrement en format 800 x 1400 
-
-
 ```
 
 ### Site-by-site analysis of all significant rRNA 2'Ome sites {.tabset}
@@ -178,14 +178,23 @@ First, mean comparison between biological conditions is performed for all the rR
 **Here is given a box plot given the C-score in the different biological context for each rRNA sites whose 2'Ome is significantly different between the biological conditions. Color indicates the different biological groups.**
 
 ```{r}
-plot_diff_sites(ribo_to_check,factor_column = params$condition_col,p_cutoff = 0.1)
+#plot_diff_sites(ribo_df,factor_column = params$condition_col,p_cutoff = 0.1)
+# prend une riboclass en entrée
+plot_diff_sites(
+  ribo_adj_annot,
+  factor_column = "Repeat",
+  p_cutoff = 0.09,
+  cscore_cutoff = 0.05,
+  adjust_pvalues_method = "fdr",
+  object_only = FALSE
+)
 ```
 
 <br>
 **The following table shows both p-value (adjusted or not) from the Kruskal-Wallis test at each site and the range of conditions'mean for ALL annotated sites :**
 
 ```{r}
-df_sites <- plot_diff_sites(ribo_to_check,factor_column = params$condition_col,object_only = TRUE)
+df_sites <- plot_diff_sites(ribo_adj_annot,factor_column = params$condition_col,object_only = TRUE)
 df_sites["range_mean"] <- df_sites["mean_max_min_difference"]
 df_sites["mean_max_min_difference"] <- NULL
 df_sites
